wheeeeee its still borked wheeeeee

--- a/tapestry/index.html
+++ b/tapestry/index.html
@@ -37,39 +37,101 @@
 				<img src="/graphics/arrows/arrowdark.png" alt="This way" class="ig-room-arrow">
 				Previous room
 			</a>
-			<div class="artboard-item" id="ab1_entrance"></div>
-			<div class="artboard-item" id="ab1_medium_frame">
+			<div class="artboard-item" id="ab1_entrance">
+				<img src="/tapestry/graphics/tapestry_entrance.png" width="800">
+			</div>
+			<div class="artboard-item" id="ab1_frame1">
 				<div class="artwork">
 					<div class="frame"></div>
 				</div>
 				<span class="art-text">
-					Here is a truly amazing picture that is really cool
+					Artboard 1, frame 1. 
 				</span>
 			</div>
 		</div>
 		<div class="artboard">
-			<div class="artboard-item" id="ab2_medium_rectangle_vertical_frame_1">
+			<div class="artboard-item" id="ab2_frame1">
 				<div class="artwork">
 					<div class="frame"></div>
 				</div>
 				<span class="art-text">
-					Another great piece, here it is, yeyyyyyyy
+					Artboard 2, frame 1. 
 				</span>
 			</div>
-			<div class="artboard-item" id="ab2_split_frame_1"></div>
-			<div class="artboard-item" id="ab2_medium_frame"></div>
-			<div class="artboard-item" id="ab2_split_frame_2"></div>
-			<div class="artboard-item" id="ab2_medium_rectangle_vertical_frame_2"></div>
+			<div class="artboard-item" id="ab2_frame2">
+				<div class="artwork">
+					<div class="frame"></div>
+				</div>
+				<span class="art-text">
+					Artboard 2, frame 2. 
+				</span>
+			</div>
+			<div class="artboard-item" id="ab2_frame3">
+				<div class="artwork">
+					<div class="frame"></div>
+				</div>
+				<span class="art-text">
+					Artboard 2, frame 3. 
+				</span>
+			</div>
+			<div class="artboard-item" id="ab2_frame4">
+				<div class="artwork">
+					<div class="frame"></div>
+				</div>
+				<span class="art-text">
+					Artboard 2, frame 4. 
+				</span>
+			</div>
+			<div class="artboard-item" id="ab2_frame5">
+				<div class="artwork">
+					<div class="frame"></div>
+				</div>
+				<span class="art-text">
+					Artboard 2, frame 5. 
+				</span>
+			</div>
 		</div>
 		<div class="artboard">
-			<div class="artboard-item" id="ab3_birds"></div>
-			<div class="artboard-item" id="ab3_large_frame"></div>
+			<div class="artboard-item" id="ab3_birds">
+				<div class="artwork">
+					<div class="frame"></div>
+				</div>
+			</div>
+			<div class="artboard-item" id="ab3_frame1">
+				<div class="artwork">
+					<div class="frame"></div>
+				</div>
+				<span class="art-text">
+					Artboard 3, frame 1. 
+				</span>
+			</div>
 		</div>
 		<div class="artboard">
-			<div class="artboard-item" id="ab4_medium_square_frame"></div>
-			<div class="artboard-item" id="ab4_medium_rectangle_frame_1"></div>
+			<div class="artboard-item" id="ab4_frame1">
+				<div class="artwork">
+					<div class="frame"></div>
+				</div>
+				<span class="art-text">
+					Artboard 4, frame 1. 
+				</span>
+			</div>
+			<div class="artboard-item" id="ab4_frame2">
+				<div class="artwork">
+					<div class="frame"></div>
+				</div>
+				<span class="art-text">
+					Artboard 4, frame 2. 
+				</span>
+			</div>
 			<div class="artboard-item" id="ab4_storage_cupboard"></div>
-			<div class="artboard-item" id="ab4_medium_rectangle_frame_2"></div>
+			<div class="artboard-item" id="ab4_frame3">
+				<div class="artwork">
+					<div class="frame"></div>
+				</div>
+				<span class="art-text">
+					Artboard 4, frame 3. 
+				</span>
+			</div>
 		</div>
 		<div class="artboard">
 			<div class="artboard-item" id="ab5_medium_square_frame"></div>
