switching frames, trying to add plinth, updating arrow
switching frames, trying to add plinth, updating arrow

--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -34,7 +34,7 @@
     <div id="content">
 
         <a href="/cave" class="ig-link ig-room-link ig-previous-room">
-            <img src="/graphics/arrows/arrowgreen.png" alt="This way" class="ig-room-arrow">
+            <img src="/rotate_arrow_clockwise.png" alt="This way" class="ig-room-arrow">
             Previous room
         </a>
 
@@ -51,5 +51,9 @@
             <div class="frame" id="frame4"></div>
             <a href="reflection2.html" id="next"></a>
         </div>
+        <div class="reflection-container five">
+            <div class="frame" id="frame5"></div>
+            <a href="reflection2.html" id="next"></a>
+        </div>        
     </div>
 </body>
