adding rotation arrow, fixing backwards arrow, adding plinths
adding rotation arrow, fixing backwards arrow, adding plinths

--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -34,7 +34,7 @@
     <div id="content">
 
         <a href="/cave" class="ig-link ig-room-link ig-previous-room">
-            <img src="/rotate_arrow_clockwise.png" alt="This way" class="ig-room-arrow">
+            <img src="/graphics/arrows/arrowgreen.png">
             Previous room
         </a>
 
@@ -54,6 +54,14 @@
         <div class="reflection-container five">
             <div class="frame" id="frame5"></div>
             <a href="reflection2.html" id="next"></a>
-        </div>        
+        </div>     
+        <div class="reflection-container six">
+            <div class="frame" id="frame6"></div>
+            <a href="reflection2.html" id="next"></a>
+        </div>    
+        <div class="reflection-container seven">
+            <div class="frame" id="frame7"></div>
+            <a href="reflection2.html" id="next"></a>
+        </div>   
     </div>
 </body>
