putting back alt and ig room arrow
added some code back in from before

--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -34,7 +34,8 @@
     <div id="content">
 
         <a href="/cave" class="ig-link ig-room-link ig-previous-room">
-            <img src="/graphics/arrows/arrowgreen.png">
+            <img src="/graphics/arrows/arrowgreen.png"> alt="This way"</alt>
+  class="ig-room-arrow">
             Previous room
         </a>
 
@@ -58,10 +59,6 @@
         <div class="reflection-container six">
             <div class="frame" id="frame6"></div>
             <a href="reflection2.html" id="next"></a>
-        </div>    
-        <div class="reflection-container seven">
-            <div class="frame" id="frame7"></div>
-            <a href="reflection2.html" id="next"></a>
-        </div>   
+        </div>      
     </div>
 </body>
