--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -34,8 +34,7 @@
     <div id="content">
 
         <a href="/cave" class="ig-link ig-room-link ig-previous-room">
-            <img src="/graphics/arrows/arrowgreen.png"> alt="This way"</alt>
-  class="ig-room-arrow">
+            <img src="/graphics/arrows/arrowgreen.png">
             Previous room
         </a>
 
@@ -59,6 +58,10 @@
         <div class="reflection-container six">
             <div class="frame" id="frame6"></div>
             <a href="reflection2.html" id="next"></a>
-        </div>      
+        </div>    
+        <div class="reflection-container seven">
+            <div class="frame" id="frame7"></div>
+            <a href="reflection2.html" id="next"></a>
+        </div>   
     </div>
 </body>
