changed outside frames from frame1 and frame2 to try and get them to show up
changed outside frames from frame1 and frame2 to try and get them to show up

--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -40,10 +40,10 @@
         </a>
 
         <div class="reflection-container one">
-            <div class="frame" id="frame1"></div>
+            <div class="frame" id="R1_F1_LHS"></div>
         </div>
         <div class="reflection-container two">
-            <div class="frame" id="frame2"></div>
+            <div class="frame" id="R1_F1_RHS"></div>
         </div>
         <div class="reflection-container three">
             <div class="frame" id="frame3"></div>
