trying with frames
trying with frames

--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -49,7 +49,7 @@
             <div class="frame" id="frame3"></div>
         </div>
         <div class="reflection-container four">
-            <div class="frame" id="frame4"></div>
+            <div class="frame" id="R1_F1_RHS"></div>
             <a href="reflection2.html" id="next"></a>
         </div>      
     </div>
