wanting frames to show up
wanting frames to show up

--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -43,10 +43,10 @@
             <div class="frame" id="R1_F1_LHS"></div>
         </div>
         <div class="reflection-container two">
-            <div class="frame" id="R1_F1_RHS"></div>
+            <div class="frame" id="R1_F2_LHS"></div>
         </div>
         <div class="reflection-container three">
-            <div class="frame" id="frame3"></div>
+            <div class="frame" id="R1_F2_RHS"></div>
         </div>
         <div class="reflection-container four">
             <div class="frame" id="R1_F1_RHS"></div>
