wanting to scale arrow and change text
wanting to scale arrow and change text

--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -34,9 +34,9 @@
     <div id="content">
 
         <a href="/cave" class="ig-link ig-room-link ig-previous-room">
-            <img src="/graphics/arrows/arrowgreen.png"> alt="This way"</alt>
-  class="ig-room-arrow">
-            Previous room
+            <img src="/graphics/arrows/arrowgreen.png">
+            <div class="scaled">Scaled</div>
+            </alt> Previous room
         </a>
 
         <div class="reflection-container one">
