Revert "putting plinths back in, removing scaled"

--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -35,6 +35,7 @@
 
         <a href="/cave" class="ig-link ig-room-link ig-previous-room">
             <img src="/graphics/arrows/arrowgreen.png">
+            <div class="scaled">Scaled</div>
             </alt> Previous room
         </a>
 
