--- a/reflections/reflection2.html
+++ b/reflections/reflection2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Room of Reflection | Imaginary Gallery</title>
     <link rel="stylesheet" type="text/css" href="/styles/common.css">
+    <link rel="stylesheet" type="text/css" href="reflection_style.css">
     <link rel="stylesheet" type="text/css" href="reflection_style2.css">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
@@ -40,11 +41,11 @@
         </div>
         <div class="reflection-container three">
             <div class="frame" id="frame3"></div>
-            <a href="reflection1.html" id="previous" class="arrow"></a>
+            <a href="reflection1.html" class="rotate-arrow" id="previous-reflection"></a>
         </div>
         <div class="reflection-container four">
             <div class="frame" id="frame4"></div>
-            <a href="reflection3.html" class="arrow" id="next"></a>
+            <a href="reflection3.html" class="rotate-arrow" id="next-reflection"></a>
         </div>
     </div>
 </body>
