--- a/reflections/reflection3.html
+++ b/reflections/reflection3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Room of Reflection | Imaginary Gallery</title>
     <link rel="stylesheet" type="text/css" href="/styles/common.css">
+    <link rel="stylesheet" type="text/css" href="reflection_style.css">
     <link rel="stylesheet" type="text/css" href="reflection_style3.css">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
@@ -34,7 +35,7 @@
     <div id="content">
         <div class="reflection-container one">
             <div class="frame" id="frame1"></div>
-            <a href="reflection2.html" class="arrow" id="previous"></a>
+            <a href="reflection2.html" class="rotate-arrow" id="previous-reflection"></a>
         </div>
         <div class="reflection-container two">
             <div class="frame" id="frame2"></div>
@@ -44,7 +45,7 @@
         </div>
         <div class="reflection-container four">
             <div class="frame" id="frame4"></div>
-            <a href="reflection4.html" class="arrow" id="next"></a>
+            <a href="reflection4.html" class="rotate-arrow" id="next-reflection"></a>
         </div>
     </div>
 </body>
