--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -41,6 +41,7 @@
 
         <div class="reflection-container one">
             <div class="frame" id="frame1"></div>
+            <div class="plinth plinth-left"></div>
         </div>
         <div class="reflection-container two">
             <div class="frame" id="frame2"></div>
@@ -50,6 +51,7 @@
         </div>
         <div class="reflection-container four">
             <div class="frame" id="frame4"></div>
+            <div class="plinth plinth-right"></div>
             <a href="reflection2.html" class="rotate-arrow" id="next-reflection"></a>
         </div>
     </div>
