--- a/reflections/reflection3.html
+++ b/reflections/reflection3.html
@@ -39,9 +39,11 @@
         </div>
         <div class="reflection-container two">
             <div class="frame" id="frame2"></div>
+            <div class="plinth plinth-left"></div>
         </div>
         <div class="reflection-container three">
             <div class="frame" id="frame3"></div>
+            <div class="plinth plinth-right"></div>
         </div>
         <div class="reflection-container four">
             <div class="frame" id="frame4"></div>
