--- a/reflections/reflection4.html
+++ b/reflections/reflection4.html
@@ -35,9 +35,11 @@
     <div id="content">
         <div class="reflection-container one">
             <div class="frame" id="frame1"></div>
+            <div class="plinth plinth-left"></div>
         </div>
         <div class="reflection-container two">
             <div class="frame" id="frame2"></div>
+            <div class="plinth plinth-right"></div>
         </div>
         <div class="reflection-container three">
             <div class="frame" id="frame3"></div>
