--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="reflection_style1.css">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" type="text/css" href="/shared/modal/modal.css">
+    <script type="text/javascript" src="/shared/modal/modal.js"></script>
 </head>
 <body>
     <link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
@@ -39,7 +41,7 @@
         </a>
 
         <div class="reflection-container one">
-            <div class="frame" id="frame1"></div>
+            <div class="frame" id="frame1" data-modal-open="ModalR1_F1_LHS"></div>
             <div class="plinth plinth-left"></div>
         </div>
         <div class="reflection-container two">
@@ -54,4 +56,15 @@
             <a href="reflection2.html" class="rotate-arrow" id="next-reflection"></a>
         </div>
     </div>
+
+    <div id="ModalR1_F1_LHS" class="modal closed">
+        <div class="modal-content">
+            <div class="pic" id="pic1"></div>
+            <div class="description">
+                <p>Some text in the Modal describing Frame 1</p>
+            </div>
+            <span class="close" data-modal-close="ModalR1_F1_LHS">&times;</span>
+        </div>
+    </div>
+
 </body>
