add modal README

--- a/reflections/reflection1.html
+++ b/reflections/reflection1.html
@@ -63,7 +63,7 @@
             <div class="description">
                 <p>Some text in the Modal describing Frame 1</p>
             </div>
-            <span class="close" data-modal-close="ModalR1_F1_LHS">&times;</span>
+            <span class="close">&times;</span>
         </div>
     </div>
 
