--- a/reflections/reflection3.html
+++ b/reflections/reflection3.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="reflection_style3.css">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" type="text/css" href="/shared/modal/modal.css">
+    <script type="text/javascript" src="/shared/modal/modal.js"></script>
 </head>
 <body>
     <link rel="stylesheet" type="text/css" href="/shared/menu/menu.css">
@@ -34,20 +36,83 @@
 
     <div id="content">
         <div class="reflection-container one">
-            <div class="frame" id="frame1"></div>
+            <div class="frame" id="frame1" data-modal-open="Modalframe1"></div>
             <a href="reflection2.html" class="rotate-arrow" id="previous-reflection"></a>
         </div>
         <div class="reflection-container two">
-            <div class="frame" id="frame2"></div>
-            <div class="plinth plinth-left"></div>
+            <div class="frame" id="frame2" data-modal-open="Modalframe2"></div>
+            <div class="plinth plinth-left" data-modal-open="Modalplinth-left"></div>
         </div>
         <div class="reflection-container three">
-            <div class="frame" id="frame3"></div>
-            <div class="plinth plinth-right"></div>
+            <div class="frame" id="frame3" data-modal-open="Modalframe3"></div>
+            <div class="plinth plinth-right" data-modal-open="Modalplinth-right"></div>
         </div>
         <div class="reflection-container four">
-            <div class="frame" id="frame4"></div>
+            <div class="frame" id="frame4" data-modal-open="Modalframe4"></div>
             <a href="reflection4.html" class="rotate-arrow" id="next-reflection"></a>
         </div>
     </div>
+
+    <div id="Modalframe1" class="modal closed">
+        <div class="modal-content">
+            <div class="pic" id="pic1"></div>
+            <img src="/gallery-hang/graphics/houseplant_painting.jpg"
+            width="400px">
+            <div class="description">
+                <p>Some text in the Modal describing frame1</p>
+            </div>
+            <span class="close">&times;</span>
+        </div>
+    </div>
+
+    <div id="Modalframe2" class="modal closed">
+        <div class="modal-content">
+            <div class="pic" id="pic1"></div>
+            <div class="description">
+                <p>Some text describing frame2</p>
+            </div>
+            <span class="close">&times;</span>
+        </div>
+    </div>
+
+    <div id="Modalframe3" class="modal closed">
+        <div class="modal-content">
+            <div class="pic" id="pic1"></div>
+            <div class="description">
+                <p>Some text describing frame3</p>
+            </div>
+            <span class="close">&times;</span>
+        </div>
+    </div>
+
+    <div id="Modalframe4" class="modal closed">
+        <div class="modal-content">
+            <div class="pic" id="pic1"></div>
+            <div class="description">
+                <p>Some text describing frame4</p>
+            </div>
+            <span class="close">&times;</span>
+        </div>
+    </div>
+
+    <div id="Modalplinth-left" class="modal closed">
+        <div class="modal-content">
+            <div class="pic" id="pic1"></div>
+            <div class="description">
+                <p>Some text describing plinth-left</p>
+            </div>
+            <span class="close">&times;</span>
+        </div>
+    </div>
+
+    <div id="Modalplinth-right" class="modal closed">
+        <div class="modal-content">
+            <div class="pic" id="pic1"></div>
+            <div class="description">
+                <p>Some text describing plinth-right</p>
+            </div>
+            <span class="close">&times;</span>
+        </div>
+    </div>
+
 </body>
