added pic to reflection 2 as test
testing out where a pic can go in reflection 2

--- a/reflections/reflection2.html
+++ b/reflections/reflection2.html
@@ -36,7 +36,11 @@
 
     <div id="content">
         <div class="reflection-container one">
-            <div class="frame" id="frame1" data-modal-open="Modalframe1"></div>
+            <div class="frame" id="frame1" data-modal-open="Modalframe1">
+                <img src="/gallery-hang/graphics/houseplant_painting.jpg"
+                width=200px
+                style="transform:rotate(-70deg);position:relative;left:120px;top:40px">
+            </div>
             <div class="plinth plinth-right" data-modal-open="Modalplinth-right"></div>
         </div>
         <div class="reflection-container two">
